# vicon_control

./: .gitignore  LICENSE  README.md  install_vicon  install_vicon_datastream_sdk  launch_all.launch  start  vicon_control.launch
general_files/: launch_all.launch  vicon_control.perspective
robot_control/control/: CMakeLists.txt  compile  send_binaries  toolchain-arm-linux-gnueabihf.cmake
robot_control/control/src/components/: CMakeLists.txt
robot_control/control/src/components/include/: pru.h
robot_control/control/src/components/src/: pru.cpp
robot_control/control/src/tools/: CMakeLists.txt  Makefile
robot_control/control/src/tools/include/: tools.h
robot_control/control/src/tools/src/: read_shared_memory.cpp  reference_client.cpp  tools.cpp  write_shared_memory.cpp
robot_workspace/src/PlotJuggler/: CMakeLists.txt  package.xml
robot_workspace/src/PlotJuggler/common/: selectlistdialog.h
robot_workspace/src/PlotJuggler/include/PlotJuggler/: alphanum.hpp  dataloader_base.h  datastreamer_base.h  optional.hpp  plotdata.h  random_color.h  statepublisher_base.h
robot_workspace/src/PlotJuggler/plotter_gui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  axis_limits_dialog.cpp  axis_limits_dialog.h  axis_limits_dialog.ui  busydialog.cpp  busydialog.h  busydialog.ui  busytaskdialog.cpp  busytaskdialog.h  curvecolorpick.cpp  curvecolorpick.h  curvecolorpick.ui  customtracker.cpp  customtracker.h  filterablelistwidget.cpp  filterablelistwidget.h  filterablelistwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotmagnifier.cpp  plotmagnifier.h  plotmatrix.cpp  plotmatrix.h  plotwidget.cpp  plotwidget.h  plotzoomer.cpp  plotzoomer.h  realslider.h  removecurvedialog.cpp  removecurvedialog.h  removecurvedialog.ui  resource.qrc  subwindow.cpp  subwindow.h  tabbedplotwidget.cpp  (+5 more)
robot_workspace/src/PlotJuggler/plugins/DataLoadCSV/: CMakeLists.txt  dataload_csv.cpp  dataload_csv.h
robot_workspace/src/PlotJuggler/plugins/DataStreamSample/: CMakeLists.txt  datastream_sample.cpp  datastream_sample.h
robot_workspace/src/PlotJuggler/plugins/DataStreamWebSocket/: CMakeLists.txt  datastreamserver.cpp  datastreamserver.h
robot_workspace/src/PlotJuggler/plugins/ROS/: CMakeLists.txt  dialog_select_ros_topics.cpp  dialog_select_ros_topics.h  dialog_select_ros_topics.ui  qnodedialog.cpp  qnodedialog.h  qnodedialog.ui  rule_editing.cpp  rule_editing.h  rule_editing.ui  shape_shifter_factory.hpp
robot_workspace/src/PlotJuggler/plugins/StatePublisherZMQ/: statepublisher_zmq.cpp  statepublisher_zmq.h
robot_workspace/src/PlotJuggler/qwt/src/: CMakeLists.txt  qwt_plot_barchart.h  qwt_plot_curve.cpp  qwt_plot_curve.h  qwt_plot_marker.h  qwt_point_mapper.cpp  qwt_symbol.cpp
robot_workspace/src/robot_gui/: CMakeLists.txt  package.xml  robot_gui.xml  setup.py
robot_workspace/src/robot_gui/include/robot_gui/: robot_gui.h
robot_workspace/src/robot_gui/launch/: robot_gui.launch
robot_workspace/src/robot_gui/scripts/: robot_gui
robot_workspace/src/robot_gui/src/robot_gui/: robot_gui.cpp
robot_workspace/src/robot_gui/ui/robot_gui/: robot_gui.ui
robot_workspace/src/robot_peer/: CMakeLists.txt  package.xml
robot_workspace/src/robot_peer/include/robot_peer/: robot_peer.h
robot_workspace/src/robot_peer/src/robot_peer/: robot_peer.cpp
robot_workspace/src/robot_peer/ui/robot_peer/: robot_peer.ui
robot_workspace/src/robot_tools/: CMakeLists.txt  package.xml
robot_workspace/src/robot_tools/include/robot_tools/: data_client.h  peer.h  reference_server.h  tools.h
robot_workspace/src/robot_tools/msg/: data_update_array.msg
robot_workspace/src/robot_tools/src/robot_tools/: communicate.cpp  data_client.cpp  data_subscriber.cpp  peer.cpp  reference_server.cpp  send_reference.cpp  tools.cpp
vicon_workspace/src/logger/: CMakeLists.txt  package.xml
vicon_workspace/src/logger/include/logger/: logger.h
vicon_workspace/src/logger/src/logger/: logger.cpp
vicon_workspace/src/logger/ui/logger/: logger.ui
vicon_workspace/src/vicon_gui/: CMakeLists.txt  package.xml  setup.py  vicon_gui.xml
vicon_workspace/src/vicon_gui/include/vicon_gui/: vicon_gui.h
vicon_workspace/src/vicon_gui/launch/: vicon_gui.launch
vicon_workspace/src/vicon_gui/scripts/: vicon_gui
vicon_workspace/src/vicon_gui/src/vicon_gui/: vicon_gui.cpp
vicon_workspace/src/vicon_gui/ui/vicon_gui/: vicon_gui.ui
vicon_workspace/src/vicon_peer/: CMakeLists.txt  package.xml
vicon_workspace/src/vicon_peer/include/vicon_peer/: vicon_peer.h
vicon_workspace/src/vicon_peer/src/vicon_peer/: vicon_peer.cpp
vicon_workspace/src/vicon_peer/ui/vicon_peer/: vicon_peer.ui
vicon_workspace/src/vicon_tools/: CMakeLists.txt  package.xml
vicon_workspace/src/vicon_tools/include/vicon_tools/: clients.h  general_tools.h  tracked_object.h  vector3D.h  vicon_tools.h
vicon_workspace/src/vicon_tools/msg/: ros_object.msg
vicon_workspace/src/vicon_tools/src/vicon_tools/: clients.cpp  dual.cpp  general_tools.cpp  markers.cpp  objects.cpp  tracked_object.cpp  vector3D.cpp  vicon_tools.cpp
vicon_workspace/src/vicon_visualizer/: CMakeLists.txt  package.xml
vicon_workspace/src/vicon_visualizer/include/vicon_visualizer/: vicon_visualizer.h  visualization.h
vicon_workspace/src/vicon_visualizer/msg/: remove_objects.msg
vicon_workspace/src/vicon_visualizer/src/vicon_visualizer/: vicon_visualizer.cpp  visualization.cpp
vicon_workspace/src/vicon_visualizer/ui/vicon_visualizer/: vicon_visualizer.ui
vision_control/src/vision_control/: CMakeLists.txt  package.xml
vision_control/src/vision_control/launch/: vision_control.launch
vision_control/src/vision_control/src/vision_control/: example_controller.cpp  vision_control.cpp
vision_control/src/vision_control_tools/: CMakeLists.txt
vision_control/src/vision_control_tools/msg/: ros_object_array.msg
vision_control_workspace/src/vision_control/: CMakeLists.txt  package.xml
vision_control_workspace/src/vision_control_tools/: CMakeLists.txt  package.xml
vision_control_workspace/src/vision_control_tools/msg/: reference.msg  ros_object.msg
(+618 files in other folders)
