<?xml version="1.0"?>
<package>
<name>plotjuggler</name>
<version>1.5.1</version>
<description>PlotJuggler: juggle with data</description>

<maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
<license>LGPLv3</license>

<url type="website">https://github.com/facontidavide/PlotJuggler</url>

<author email="davide.faconti@gmail.com">Davide Faconti</author>

<buildtool_depend>catkin</buildtool_depend>

<build_depend>rosbag</build_depend>
<build_depend>rosbag_storage</build_depend>
<build_depend>roscpp</build_depend>
<build_depend>roscpp_serialization</build_depend>
<build_depend>rostime</build_depend>
<build_depend>topic_tools</build_depend>
<build_depend>ros_type_introspection</build_depend>
<build_depend>qtbase5-dev</build_depend>
<build_depend>libqt5-svg-dev</build_depend>
<build_depend>binutils</build_depend>

<run_depend>rosbag</run_depend>
<run_depend>rosbag_storage</run_depend>
<run_depend>roscpp</run_depend>
<run_depend>roscpp_serialization</run_depend>
<run_depend>rostime</run_depend>
<run_depend>topic_tools</run_depend>
<run_depend>ros_type_introspection</run_depend>
<run_depend>qtbase5-dev</run_depend>
<run_depend>libqt5-svg-dev</run_depend>
<run_depend>binutils</run_depend>

<!-- The export tag contains other, unspecified, tags -->
<export>
<!-- Other tools can request additional information be placed here -->

</export>
</package>
