<?xml version="1.0"?>
<package>
	<!-- Package information -->
	<name>logger</name>
	<version>1.0.0</version>
	<description>Visualizes Vicon Tracker data in Rviz</description>
	<maintainer email="s.j.m.koopmans@student.tue.nl">Sjoerd Koopmans</maintainer>
	<license>BSD</license>
	<url type="website">https://github.com/SjoerdKoop/vicon_control</url>

	<!-- Catkin -->
	<buildtool_depend>catkin</buildtool_depend>

	<!-- Build dependencies -->
	<build_depend>roscpp</build_depend>
	<build_depend>rqt_gui_cpp</build_depend>

	<!-- Run dependencies -->
	<run_depend>roscpp</run_depend>
	<run_depend>rqt_gui_cpp</run_depend>
</package>
