<?xml version="1.0"?>
<package>
	<!-- Package information -->
	<name>vicon_gui</name>
	<version>0.0.0</version>
	<description>The vicon_gui package</description>
	<maintainer email="s.j.m.koopmans@student.tue.nl">Sjoerd Koopmans</maintainer>
	<license>BSD</license>
	<url type="website">https://github.com/SjoerdKoop/vicon_control</url>

	<!-- Catkin -->
	<buildtool_depend>catkin</buildtool_depend>

	<!-- Build dependencies -->
	<build_depend>roscpp</build_depend>
	<build_depend>roslaunch</build_depend>
	<build_depend>rqt_gui</build_depend>
	<build_depend>rqt_gui_cpp</build_depend>
	<build_depend>logger</build_depend>
	<build_depend>vicon_peer</build_depend>
	<build_depend>vicon_visualizer</build_depend>

	<!-- Run dependencies -->
	<run_depend>roscpp</run_depend>
	<run_depend>rqt_gui</run_depend>
	<run_depend>rqt_gui_cpp</run_depend>
	<run_depend>logger</run_depend>
	<run_depend>vicon_peer</run_depend>
	<run_depend>vicon_visualizer</run_depend>

	<!-- Export -->
	<export>
		<rqt_gui plugin="${prefix}/vicon_gui.xml"/>
	</export>
</package>
