<?xml version="1.0"?>
<package format="2">
	<!-- Package information -->
	<name>vision_control_tools</name>
	<version>1.0.0</version>
	<description>The vision_control_tools package</description>
	<maintainer email="s.j.m.koopmans@student.tue.nl">Sjoerd Koopmans</maintainer>
	<license>BSD</license>
	<url type="website">https://github.com/SjoerdKoop/vicon_control</url>

	<!-- Catkin -->
	<buildtool_depend>catkin</buildtool_depend>

	<!-- Build dependencies -->
	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>roscpp</build_depend>

	<!-- Execution dependencies -->
	<exec_depend>message_runtime</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>roscpp</exec_depend>
</package>
